<resources>
    <string name="app_name">Balance账本</string>
    <string name="settings">设置</string>
    <string name="records">数据</string>
    <string name="analysis">分析</string>
    <string name="title_activity_settings">设置</string>
    <string name="income">收入</string>
    <string name="outcome">支出</string>
    <string name="food">餐饮</string>
    <string name="transportation">交通</string>
    <string name="education">教育</string>
    <string name="wages">工资</string>
    <string name="living_expenses">生活费</string>
    <string name="part_time">兼职</string>
    <string name="save">保 存</string>
    <string name="input_the_amount">手动输入数额</string>
    <string name="class_edit">编辑分类</string>
    <string name="fruit">水果</string>
    <string name="shopping">购物</string>
    <string name="investment">投资</string>
    <string name="entertainment">娱乐</string>
    <string name="interest">利息</string>
    <string name="others">其他</string>
    <string name="input_remark">备注：</string>
    <string name="type">种类</string>
    <string name="icon">图标</string>
    <string name="default_amount">0.00</string>
    <string name="default_date">2019&#8211;4&#8211;28 星期日</string>
    <string name="default_money">0 元</string>
    <string name="currency">￥</string>
    <string name="comment">备注:</string>
    <string name="choose_date">选择日期</string>
    <string name="morning">上午</string>
    <string name="noon">中午</string>
    <string name="afternoon">下午</string>
    <string name="evening">晚上</string>
    <string name="today">今天</string>
    <string name="info">我的</string>
    <string name="repayment">还款</string>
    <string name="recharge">充值</string>
    <string name="word_currency">元</string>
    <string name="mode_year">年视图</string>
    <string name="mode_month">月视图</string>
    <string name="mode_week">周视图</string>
    <string name="mode_day">日视图</string>
    <string name="default_budget">预算: 2000</string>
    <string name="default_outcome">支出: 2000</string>
</resources>
