<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ImageView android:id="@+id/show_bill_icon" android:layout_width="48dp" android:layout_margin="6dp" android:layout_height="48dp" android:src="@drawable/ic_pxl_calendar"/>
    <LinearLayout android:layout_width="0dp" android:layout_weight="1" android:layout_height="60dp" android:orientation="vertical">
        <TextView android:id="@+id/show_bill_type" android:layout_width="wrap_content" android:paddingStart="8dp" android:paddingEnd="8dp" android:layout_height="30dp" android:gravity="center_vertical" android:text="@string/food" android:textSize="18sp"/>
        <TextView android:id="@+id/show_bill_comment" android:layout_width="match_parent" android:layout_height="24dp" android:layout_marginTop="0dp" android:paddingStart="8dp" android:paddingEnd="8dp"
                  android:ellipsize="end" android:textSize="12sp" android:maxLines="1" android:gravity="center_vertical" android:text="@string/input_remark"/>
    </LinearLayout>
    <TextView android:id="@+id/show_bill_money" android:layout_width="80dp" android:layout_height="60dp" android:gravity="center" android:textSize="24sp" android:text="@string/default_money"/>

</LinearLayout>