<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".page.ChooseDateFragment">
    <CalendarView android:id="@+id/choose_date_calendar"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>
    <LinearLayout android:layout_width="match_parent" style="?android:attr/buttonBarStyle" android:layout_height="60dp" android:orientation="horizontal">
        <Button android:background="@drawable/radius"
                android:layout_margin="8dp"
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/choose_date_morning"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/morning"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="#ffff00"
                android:gravity="center"/>
        <Button android:background="@drawable/radius"
                android:layout_margin="8dp"
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/choose_date_noon"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/noon"
                android:textSize="28sp"
                android:textColor="#aaaaaa"
                android:textStyle="bold"
                android:gravity="center"/>
        <Button android:background="@drawable/radius"
                android:layout_margin="8dp"
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/choose_date_afternoon"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/afternoon"
                android:textSize="28sp"
                android:textColor="#aaaaaa"
                android:textStyle="bold"
                android:gravity="center"/>
        <Button android:background="@drawable/radius"
                android:layout_margin="8dp"
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/choose_date_evening"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/evening"
                android:textSize="28sp"
                android:textColor="#aaaaaa"
                android:textStyle="bold"
                android:gravity="center"/>
    </LinearLayout>
</LinearLayout>