<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".page.BillDetailFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/detail_delete"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:padding="2dp"
                android:src="@drawable/ic_delete" />

        <TextView
                android:id="@+id/detail_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/default_date"
                android:textSize="20sp" />

        <ImageView
                android:id="@+id/detail_edit"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:padding="2dp"
                android:src="@drawable/ic_edit" />

    </LinearLayout>

    <ImageView
            android:id="@+id/detail_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp" />

    <TextView
            android:id="@+id/detail_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/type"
            android:textSize="20sp"
            android:textStyle="bold" />


    <TextView
            android:id="@+id/detail_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/default_money"
            android:textSize="36sp" />

    <TextView
            android:id="@+id/detail_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:maxHeight="160dp"
            android:maxLines="4"
            android:padding="8dp"
            android:text="@string/comment"
            android:textSize="16sp" />

</LinearLayout>